--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "cssmin": "^0.4.3",
     "grunt": "^1.1.0",
     "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-imagemin": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.1.0",
     "htmlmin": "0.0.7",
@@ -39,6 +42,12 @@
     "bootstrap": "^4.5.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-filerev": "^2.3.1",
+    "grunt-usemin": "^3.1.1",
     "jquery": "^3.5.0",
     "popper.js": "^1.16.1"
   }
